logs/geodis.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/aaargh'...
Listing './lib/python3.5/site-packages/aaargh-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/geodis'...
Compiling './lib/python3.5/site-packages/geodis/business.py'...
***   File "./lib/python3.5/site-packages/geodis/business.py", line 115
    print len(nodes)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geodis/city.py'...
***   File "./lib/python3.5/site-packages/geodis/city.py", line 159
    print 1000*(et - st),"ms"
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geodis/data'...
Compiling './lib/python3.5/site-packages/geodis/data/geonames2mysql.py'...
***   File "./lib/python3.5/site-packages/geodis/data/geonames2mysql.py", line 147
    print r
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/geodis/location.py'...
***   File "./lib/python3.5/site-packages/geodis/location.py", line 199
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geodis/provider'...
Compiling './lib/python3.5/site-packages/geodis/provider/factual.py'...
***   File "./lib/python3.5/site-packages/geodis/provider/factual.py", line 49
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geodis/provider/geonames.py'...
***   File "./lib/python3.5/site-packages/geodis/provider/geonames.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geodis/provider/ip2location.py'...
***   File "./lib/python3.5/site-packages/geodis/provider/ip2location.py", line 48
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geodis/provider/zipcodes.py'...
***   File "./lib/python3.5/site-packages/geodis/provider/zipcodes.py", line 49
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/geodis/us_states.py'...
***   File "./lib/python3.5/site-packages/geodis/us_states.py", line 128
    print State.get('CA')
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geodis-2.0.9.egg-info'...
Listing './lib/python3.5/site-packages/geohasher'...
Compiling './lib/python3.5/site-packages/geohasher/hasher.py'...
***   File "./lib/python3.5/site-packages/geohasher/hasher.py", line 121
    print x, dec(enc(x))
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/geohasher-0.1.dev0.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/upoints'...
Listing './lib/python3.5/site-packages/upoints-0.12.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
